<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/homee"/>
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports" />

    </group>





    <group android:checkableBehavior="single">

        <item android:title="@string/interact_with_us">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share_button"
                    android:title="@string/share_the_app" />
                <item
                    android:id="@+id/nav_chat"
                    android:icon="@drawable/ic_chat"
                    android:title="@string/talk_with_us" />

            </menu>
        </item>


    </group>





</menu>