<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juliusnyambok.Common.LoginPage"
    android:background="@color/colorAccent"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/back_icon"
           android:padding="5dp"
           android:src="@drawable/back_icon"
           android:contentDescription="@string/back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name"
                android:layout_margin="5dp"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/account_head"
                >


                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/poppins_light"
                       android:inputType="text"
                       />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                android:layout_margin="5dp"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/password_lock"
                app:endIconMode="password_toggle"

                >


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerVertical="true"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotten_password"
                    android:background="#00000000"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>




            </RelativeLayout>


            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
                android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:background="@drawable/rounded_button"
                android:textColor="@color/colorWhite"
                android:onClick="sign_in_function"
                android:layout_marginTop="20dp"
                />


    </LinearLayout>


</LinearLayout>





</ScrollView>