<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:background="@android:color/transparent"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
   >



    
    
    
    
    
    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:id="@+id/disaster_cardview"
           >

            <TextView
                android:id="@+id/disaster_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disaster_name"
                android:textColor="#ffffff"
                android:background="#696969"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Light"/>
            <TextView
                android:id="@+id/disaster_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"

                android:layout_below="@id/disaster_name"
                android:padding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:drawableStart="@drawable/location"
                android:drawableLeft="@drawable/location" />
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/disaster_location"
                android:background="#808080"/>
            <TextView
                android:id="@+id/disaster_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disaster_description"
                android:textColor="#213240"
                android:fontFamily="@font/poppins_medium"
                android:layout_below="@id/divider"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="3dp"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                />







        </RelativeLayout>


</androidx.cardview.widget.CardView>